Init of objects done

--- a/PacMan/nbproject/project.properties
+++ b/PacMan/nbproject/project.properties
@@ -29,8 +29,8 @@ dist.jar=${dist.dir}/PacMan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gridworld.jar=PacMan/gridworld.jar
-file.reference.pacgrid.jar=PacMan/pacgrid.jar
+file.reference.gridworld.jar=src/PacMan/gridworld.jar
+file.reference.pacgrid.jar=src/PacMan/pacgrid.jar
 includes=**
 jar.compress=false
 javac.classpath=\
